--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+node_modules
 dist
 dist-ssr
 *.local
@@ -24,5 +25,7 @@ dist-ssr
 *.sw?
 
 .env
+
 .env
+
 node_modules
